Fix the scrollbar problem

--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -1,6 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 
+body{
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
 .r2l{
   direction: rtl;
   text-align: right;
